...
            imageView.centerYAnchor.constraint(equalTo: view.centerYAnchor)
        ])
    }
    
    private func setupLoginButtonView() {
        let button = UIButton(type: .custom)
        button.accessibilityIdentifier = "Authenticate"
        button.setTitle("Войти", for: .normal)
        button.setTitleColor(UIColor.ypBlack, for: .normal)
        button.titleLabel?.font = UIFont.systemFont(ofSize: 17, weight: .bold)
        button.backgroundColor = UIColor.ypWhite
        button.layer.cornerRadius = 16
        button.layer.masksToBounds = true
...
