...
        setupProgressView()
        setupProgressViewConstraints()
        //loadRequest()
        
        webView?.navigationDelegate = self
        presenter?.viewDidLoad()
        webView?.accessibilityIdentifier = "UnsplashWebView"
        
        estimatedProgressObservation = webView?.observe(
            \.estimatedProgress,
             options: []) { [weak self] _, _ in
                 guard let self = self else { return }
                 //self.updateProgress()
...
